# dls-edm

./: .copier-answers.yml  .gitignore  Dockerfile  Makefile  Pipfile  README.md  catalog-info.yaml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _dist.yml  _test.yml
dls_edm/: __init__.py  act_save.cc  common.py  edmObject.py  edmProperties.py  edmTable.py  flip_horizontal.py  generic.py  guibuilder.py  helper.pkl  resize.py  substitute_embed.py  summary.py  titlebar.py  utils.py  vacuum.py
documentation/: config.cfg  manual.src
src/dls_edm/: __init__.py  __main__.py  act_save.cc  colour_helper.pkl  common.py  edmObject.py  edmProperties.py  edmTable.py  flip_horizontal.py  generic.py  guibuilder.py  properties_helper.pkl  resize.py  substitute_embed.py  summary.py  titlebar.py  utils.py  vacuum.py
tests/: test_cli.py
