[metadata]
name = dls_edm
version = file: dls_edm/VERSION
description = dls_edm
 
[options]
packages = dls_edm
include_package_data = False
 
[options.package_data]
dls_edm = VERSION
 
[options.entry_points]
console_scripts = dls-edm-resize.py = dls_edm.resize:cl_resize
                  dls-edm-titlebar.py = dls_edm.titlebar:cl_titlebar
                  dls-edm-substitute-embed.py = dls_edm.substitute_embed:cl_substitute_embed
                  dls-edm-flip-horizontal.py = dls_edm.flip_horizontal:cl_flip_horizontal
