[metadata]
name = dls_edm
description = dls_edm
classifiers =
    Programming Language :: Python :: 3.10
 
[options]
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

include_package_data = False
install_requires =
    dls_dependency_tree>=3.1.4
    sphinx-rtd-theme
    dill

[options.extras_require]
dev =
    pytest
    pytest-mypy
    pytest-flake8
    pytest-black
    mypy
    types-pyyaml
    types-mock >=4.0
    isort >5.0
    flake8
    flake8-isort
    black ==19.10b0
    typing-extensions
    importlib-metadata
    pydocstyle
 
# [options.package_data]
# dls_edm = VERSION
# * = *.pkl

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests
 
[options.entry_points]
console_scripts = dls-edm-resize = dls_edm.resize:cl_resize
                  dls-edm-titlebar = dls_edm.titlebar:cl_titlebar
                  dls-edm-substitute-embed = dls_edm.substitute_embed:cl_substitute_embed
                  dls-edm-flip-horizontal = dls_edm.flip_horizontal:cl_flip_horizontal

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]
